--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-    "name": "stefangabos/zebra_pagination",
+    "name": "bilge/zebra-pagination",
     "type": "library",
     "description": "A generic, Twitter Bootsrap compatible, PHP pagination library that automatically generates navigation links",
     "keywords": ["php","pagination", "paging", "paginator", "paginate"],
     "homepage": "https://github.com/stefangabos/Zebra_Pagination",
-    "license": "LGPL-3.0",
     "authors": [
         {
             "name": "Stefan Gabos",
@@ -15,6 +14,9 @@
     ],
     "require": {
         "php": ">=5"
+    },
+    "replace": {
+        "stefangabos/zebra_pagination": "^2"
     },
     "autoload": {
         "classmap": [
